# agentic-web3-rag

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONSENT.md  CONTRIBUTING.md  GOVERNANCE.md  LEGAL.md  LICENSE  Makefile  PRIVACY.md  README.md  __main__.py  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  consent_to_index.md  feature_request.md
.github/workflows/: ci.yml  release.yml
agents/: orchestrator.py
apps/api/: agent.py  assist_helper.py  embeddings_local.py  main.py
apps/common/: compliance.py  freshness.py
configs/: SOURCES.yaml
data/: consents.yaml  freshness.json  sources.yaml
data/processed/: chunks.jsonl  ethereum-en-developers-docs.md  ethereum-org-json-rpc.md  geth-ethereum-org-rpc.md
data/vectors/: embeddings.json
docs/: DATA-SOURCING-SUMMARY.md
experiments/ai_consent_audit/: README.md  analysis.py  classifier.py  comparison_sampler.py  config.py  github_sampler.py  paper_generator.py  run_experiment.py  signal_scanner.py
experiments/ai_consent_audit/data/: analysis_results.json  classified.csv  comparison_classified.csv  comparison_repos_raw.jsonl  comparison_signals_raw.jsonl  paper.md  references.bib  repos_raw.jsonl  signals_raw.jsonl
infra/docker/api/: Dockerfile
models/: config.py  policy.py  schemas.py
pipelines/: discover_web3.py  embed.py  enrich_licenses.py  eval_retrieval.py  index.py  ingest.py  ingest_entry.py  preprocess.py  source_loader.py
policies/: consent_registry.py
scripts/: auto_discover_and_ingest.sh  build_ndjson_from_urls.py  discover_web3_sources.py  mark_seen.py  ndjson_to_qdrant.py  policy_guard.py  priority_domains.py  purge.py
tests/: conftest.py  test_api.py  test_compliance.py  test_consent_gate.py  test_freshness.py  test_preprocess.py
tools/: retrieval.py
webui/: .env.local.example  package-lock.json  package.json
webui/src/app/: layout.tsx  page.tsx
webui/src/lib/: config.ts
